corrected sidebar spacing and made layout more responsive

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
   font-weight: bold;
 }
 
-img {
+#user-image {
   width: 75px;
   height: auto;
 }
@@ -22,7 +22,7 @@ header {
   font-family: 'Lato', sans-serif;
 }
 
-html {
+body {
   background: #E5ECEB;
   color: #010202;
   font-family: 'Lato', sans-serif;
@@ -33,14 +33,8 @@ html {
   color: #010202;
   font-family: 'Lato', sans-serif;
   border-style: solid;
-  border-right: -10px;
   border-color: #6C6D6D;
-  margin-left: 20px;
-}
-
-.arrow {
-  width: 80px;
-  height: auto;
+  margin-left: 3em;
 }
 
 #left-arrow {
@@ -48,20 +42,30 @@ html {
 }
 
 #last-job-text {
-  margin-top: 15px;
+  margin-top: 2em;
 }
 
 #next-job-text {
   text-align: right;
-  margin-top: 15px;
+  margin-top: 2em;
+}
+
+a {
+  color: black;
+  font-weight: bold;
+}
+
+a:visited {
+  color: black;
+  font-weight: bold;
 }
 
 .section-title {
   font-weight: bold;
   background: #262626;
   color: #E5E5E5;
-  margin-left: -15px;
-  margin-right: -15px;
+  margin-left: -1.1em;
+  margin-right: -1.1em;
 }
 
 .subheader {
@@ -69,8 +73,8 @@ html {
 }
 
 #job-description {
-  margin-left: -15px;
-  margin-right: -15px;
+  margin-left: -1.1em;
+  margin-right: -1.1em;
   text-align: center;
   padding-left: 25%;
   padding-right: 25%;
@@ -84,8 +88,8 @@ html {
 }
 
 .timeline {
-  margin-left: -15px;
-  margin-right: -15px;
+  margin-left: -1.1em;
+  margin-right: -1.1em;
   font-weight: bold;
   text-align: center;
 }
@@ -125,18 +129,18 @@ html {
   text-align: right;
   }
 
-@media only screen and  (min-width: 992px) {
+/*@media only screen and  (min-width: 992px) {
   .col-md-12 {
     width: 104.5% !important;
   }
-}
+}*/
 
 .task-description {
   display: none;
 }
 
 .right-sidebar-section {
-  margin-left: 2em;
+  margin-left: 3em;
   border-style: solid;
   border-color: #6C6D6D;
   margin-bottom: 1em;
